testdata/invalid/invalid_readonly_enum.bop
readonly enum FooEnum {
    F = 1;
    O = 2;
} 